<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUsActivity">

    <!-- Основной контент -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#00000000"
            android:elevation="4dp"
            android:theme="@style/ToolbarTheme"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/menu_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/menu" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/logo_icon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_logo"
                    android:contentDescription="@string/logo" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/profile_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/profile"
                    android:src="@drawable/ic_profile" />

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>
        <ImageView
            android:id="@+id/image_below_toolbar"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_logo"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/toolbar"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/image_description" />

        <TextView
            android:id="@+id/long_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_below_toolbar"
            android:layout_marginTop="16dp"
            android:text="@string/about_us_text"
            android:padding="16dp"
            android:textSize="16sp"
            android:background="@android:color/white"
            android:textColor="@android:color/black" />
        <!-- Другие элементы UI -->
    </RelativeLayout>


    <!-- Навигационное меню -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu"
    />

</androidx.drawerlayout.widget.DrawerLayout>
