<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUsActivity">

    <!-- Основной контент -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#00000000"
            android:elevation="4dp"
            android:theme="@style/ToolbarTheme"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/menu_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/menu" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/logo_icon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_logo"
                    android:contentDescription="@string/logo" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/profile_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/profile"
                    android:src="@drawable/ic_profile" />

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="60dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <!-- ListView for displaying friends and their visit times -->
            <ListView
                android:id="@+id/friendsListView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@android:color/darker_gray"
                android:dividerHeight="1dp"/>

        </LinearLayout>
        <!-- Другие элементы UI -->
    </RelativeLayout>


    <!-- Навигационное меню -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu"
        />

</androidx.drawerlayout.widget.DrawerLayout>
