<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUsActivity">

    <!-- Основной контент -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#00000000"
            android:elevation="4dp"
            android:theme="@style/ToolbarTheme"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/menu_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/menu" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/logo_icon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_logo"
                    android:contentDescription="@string/logo" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/profile_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/profile"
                    android:src="@drawable/ic_profile" />

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="160dp">

            <TextView
                android:id="@+id/instructionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="To receive bonuses, enter a valid bonus code."
                android:textSize="32sp"
                android:textColor="#000000"
                android:layout_gravity="center_horizontal"
                />
            <!-- EditText for Promo Code Input -->
            <EditText
                android:id="@+id/promoCodeInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Promo Code"
                android:inputType="text"
                android:padding="24dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/edittext_rounded"
                android:layout_marginBottom="16dp"/>

            <!-- Submit Button -->
            <Button
                android:id="@+id/submitPromoCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Submit"
                style="@style/LoginButtonStyle"
                android:layout_gravity="center_horizontal"
                android:padding="8dp"/>

        </LinearLayout>
        <!-- Другие элементы UI -->
    </RelativeLayout>


    <!-- Навигационное меню -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu"
        />

</androidx.drawerlayout.widget.DrawerLayout>
