<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateActivityActivity">

    <!-- Основной контент -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#00000000"
            android:elevation="4dp"
            android:theme="@style/ToolbarTheme"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/menu_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/menu" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/logo_icon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_logo"
                    android:contentDescription="@string/logo" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/profile_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/profile"
                    android:src="@drawable/ic_profile" />

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

        <!-- Form Elements -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Creating an Activity"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginBottom="24dp"/>

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Title"
                android:backgroundTint="@android:color/holo_red_dark"
                android:textColorHint="@android:color/holo_red_dark"
                android:textColor="@android:color/holo_red_dark"
                android:layout_marginBottom="16dp"/>

            <Spinner
                android:id="@+id/sp_activity_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_red_dark"
                android:layout_marginBottom="16dp"/>

            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Adress"
                android:backgroundTint="@android:color/holo_red_dark"
                android:textColorHint="@android:color/holo_red_dark"
                android:textColor="@android:color/holo_red_dark"
                android:layout_marginBottom="16dp"/>

            <EditText
                android:id="@+id/et_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Date"
                android:backgroundTint="@android:color/holo_red_dark"
                android:textColorHint="@android:color/holo_red_dark"
                android:textColor="@android:color/holo_red_dark"
                android:layout_marginBottom="16dp"/>

            <EditText
                android:id="@+id/et_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Time"
                android:backgroundTint="@android:color/holo_red_dark"
                android:textColorHint="@android:color/holo_red_dark"
                android:textColor="@android:color/holo_red_dark"
                android:layout_marginBottom="24dp"/>

            <Button
                android:id="@+id/btn_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Create"
                android:backgroundTint="@android:color/holo_red_dark"
                android:textColor="@android:color/white"/>
        </LinearLayout>
    </RelativeLayout>

    <!-- Навигационное меню -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu"
        />

</androidx.drawerlayout.widget.DrawerLayout>
